# libicap

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  demo.c  libicap.c  libicap.h  libicap.pc  libicap.pc.in
m4/: acx_debug_cflags.m4
src/: .color_coded  Makefile  Makefile.am  Makefile.tests  ic_core.c  ic_core.h  ic_err.h  ic_utils.c  ic_utils.h
src/demo/: Makefile  ic_demo.c  ic_demo_chunked.c  ic_demo_cl  ic_demo_cl.c
src/test/: Makefile  ic_test_chunked.c  ic_test_cl.c  ic_test_cl_req.c  ic_test_raw.c
